--- a/Resources/ConverterDictionary.xaml
+++ b/Resources/ConverterDictionary.xaml
@@ -50,9 +50,9 @@
     <converters:TextAlignmentToStringConverter x:Key="TextAlignmentToStringConverter" />
 
     <x:Array x:Key="TextColorModes" Type="models:TextColorMode" xmlns:models="clr-namespace:TerminalMonitor.Models">
-        <models:TextColorMode>Constant</models:TextColorMode>
+        <models:TextColorMode>Static</models:TextColorMode>
         <models:TextColorMode>Hash</models:TextColorMode>
-        <models:TextColorMode>InvertHash</models:TextColorMode>
+        <models:TextColorMode>HashInverted</models:TextColorMode>
     </x:Array>
 
     <converters:TextColorModeToStringConverter x:Key="TextColorModeToStringConverter" />
