--- a/Resources/ConverterDictionary.xaml
+++ b/Resources/ConverterDictionary.xaml
@@ -49,4 +49,13 @@
 
     <converters:TextAlignmentToStringConverter x:Key="TextAlignmentToStringConverter" />
 
+    <x:Array x:Key="TextColorModes" Type="models:TextColorMode" xmlns:models="clr-namespace:TerminalMonitor.Models">
+        <models:TextColorMode>Static</models:TextColorMode>
+        <models:TextColorMode>Hash</models:TextColorMode>
+        <models:TextColorMode>HashInverted</models:TextColorMode>
+        <models:TextColorMode>HashSymmetric</models:TextColorMode>
+    </x:Array>
+
+    <converters:TextColorModeToStringConverter x:Key="TextColorModeToStringConverter" />
+
 </ResourceDictionary>
