--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -101,12 +101,13 @@
 
         <GridSplitter Grid.Row="5" Height="5" HorizontalAlignment="Stretch" />
 
-        <ListView Name="listTerminal" Grid.Row="6" SelectionMode="Single" SelectionChanged="ListTerminal_SelectionChanged" MouseDoubleClick="ListTerminal_MouseDoubleClick">
+        <ListView Name="listTerminal" Grid.Row="6" SelectionMode="Single" SelectionChanged="ListTerminal_SelectionChanged">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                     <Setter Property="VerticalContentAlignment" Value="Stretch" />
                     <EventSetter Event="PreviewMouseDown" Handler="ListTerminalItemContainer_MouseDown" />
+                    <EventSetter Event="MouseDoubleClick" Handler="ListTerminalItemContainer_MouseDoubleClick" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ContextMenu>
