--- a/Windows/FieldDisplayDetailWindow.xaml
+++ b/Windows/FieldDisplayDetailWindow.xaml
@@ -11,6 +11,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
@@ -18,6 +19,8 @@
         <GroupBox Name="grpBxGeneral" Grid.Row="0" Header="General">
             <Grid Name="grdGeneral">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
@@ -29,10 +32,32 @@
                 <TextBox Name="txtBxKey" Grid.Row="0" Grid.Column="1"
                          Style="{StaticResource textBoxInValidation}"
                          Validation.ErrorTemplate="{StaticResource validationTemplate}" />
+
+                <Label Name="lblHeaderName" Grid.Row="1" Grid.Column="0" Content="Header" />
+                <TextBox Name="txtBxHeaderName" Grid.Row="1" Grid.Column="1" Text="{Binding HeaderName}"
+                         Style="{StaticResource textBoxInValidation}"
+                         Validation.ErrorTemplate="{StaticResource validationTemplate}" />
             </Grid>
         </GroupBox>
 
-        <GroupBox Name="grpBxStyle" Grid.Row="1" Header="Style">
+        <GroupBox Name="grpBxHeaderStyle" Grid.Row="1" Header="Column Header">
+            <Grid Name="grdHeaderStyle">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Label Name="lblHeaderStyle" Grid.Row="0" Grid.Column="0" Content="Customize style" />
+                <CheckBox Name="chkBxHeaderStyle" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center"
+                          IsChecked="{Binding CustomizeHeaderStyle}" />
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Name="grpBxStyle" Grid.Row="2" Header="Text Style">
             <Grid Name="grdStyle">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -43,7 +68,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <Label Name="lblEnable" Grid.Row="0" Grid.Column="0" Content="Customize style" />
+                <Label Name="lblStyle" Grid.Row="0" Grid.Column="0" Content="Customize style" />
                 <CheckBox Name="chkBxStyle" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding CustomizeStyle}" />
 
                 <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" IsEnabled="{Binding CustomizeStyle}" >
@@ -112,7 +137,7 @@
             </Grid>
         </GroupBox>
 
-        <Grid Name="grdWindowButton" Grid.Row="2" Margin="8">
+        <Grid Name="grdWindowButton" Grid.Row="3" Margin="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
