--- a/Windows/Controls/ExecutionListView.xaml
+++ b/Windows/Controls/ExecutionListView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
+             xmlns:helpers="clr-namespace:TerminalMonitor.Windows.Helpers"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=local:ExecutionListViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -14,7 +15,8 @@
         
         <ListView Name="lstExecutions" Grid.Row="0" MinHeight="30"
                   SelectionChanged="LstExecutions_SelectionChanged"
-                  MouseDown="LstExecutions_MouseDown">
+                  MouseDown="LstExecutions_MouseDown"
+                  helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Stop" Icon="□" Command="{Binding Path=StopCommand}" />
