--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              xmlns:controls="clr-namespace:TerminalMonitor.Windows.Controls"
+             xmlns:helpers="clr-namespace:TerminalMonitor.Windows.Helpers"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=local:TerminalViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -101,7 +102,8 @@
 
         <GridSplitter Grid.Row="5" Height="5" HorizontalAlignment="Stretch" />
 
-        <ListView Name="listTerminal" Grid.Row="6" SelectionMode="Single" SelectionChanged="ListTerminal_SelectionChanged">
+        <ListView Name="listTerminal" Grid.Row="6" SelectionMode="Single" SelectionChanged="ListTerminal_SelectionChanged"
+                  helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
