--- a/Windows/Controls/TextStyleView.xaml
+++ b/Windows/Controls/TextStyleView.xaml
@@ -149,9 +149,22 @@
                     </ComboBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Name="chkBxWidth" IsChecked="{Binding EnableWidth}" />
-                    <Label Name="lblWidth" Content="Width" IsEnabled="{Binding EnableWidth}" />
-                    <TextBox Name="txtBx" />
+                    <CheckBox Name="chkBxWidth" IsChecked="{Binding EnableMaxWidth}" />
+                    <Label Name="lblWidth" Content="Max width" IsEnabled="{Binding EnableMaxWidth}" />
+                    <local:NumericTextBox x:Name="numBxWidth" Width="40" IsEnabled="{Binding EnableMaxWidth}"
+                                              Value="{Binding MaxWidth}" MaxValue="2000" MinValue="30" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkBxHeight" IsChecked="{Binding EnableMaxHeight}" />
+                    <StackPanel Orientation="Horizontal" IsEnabled="{Binding EnableMaxHeight}">
+                        <Label Name="lblHeight" Content="Max height" IsEnabled="{Binding EnableMaxHeight}" />
+                        <local:NumericTextBox x:Name="numBxHeight" Width="40" IsEnabled="{Binding EnableMaxHeight}"
+                                              Value="{Binding MaxHeight}" MaxValue="500" MinValue="10" />
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkBxTextWrapping" IsChecked="{Binding TextWrapping}" />
+                    <Label Name="lblTextWrapping" Content="Text Wrapping" />
                 </StackPanel>
             </WrapPanel>
         </GroupBox>
