--- a/Windows/Controls/TextStyleView.xaml
+++ b/Windows/Controls/TextStyleView.xaml
@@ -42,7 +42,7 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                    <Rectangle Name="rctForegroundColor" Width="10" Height="10"
+                    <Rectangle Name="rctForegroundColor" Width="10" Height="10" IsEnabled="{Binding EnableForeground}"
                                Stroke="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"
                                Fill="{Binding ForegroundColor}" MouseDown="RctForegroundColor_MouseDown">
                         <Rectangle.Style>
@@ -68,7 +68,7 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                    <Rectangle Name="rctBackgroundColor" Width="10" Height="10"
+                    <Rectangle Name="rctBackgroundColor" Width="10" Height="10" IsEnabled="{Binding EnableBackground}"
                                Stroke="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"
                                Fill="{Binding BackgroundColor}" MouseDown="RctBackgroundColor_MouseDown">
                         <Rectangle.Style>
@@ -84,7 +84,7 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Name="chkBoCellBackground" IsChecked="{Binding EnableCellBackground}" />
+                    <CheckBox Name="chkBxCellBackground" IsChecked="{Binding EnableCellBackground}" />
                     <Label Name="lblCellBackground" Content="Cell background" IsEnabled="{Binding EnableCellBackground}" />
                     <ComboBox Name="cmbBxCellBoregroundColor" IsEnabled="{Binding EnableCellBackground}"
                               ItemsSource="{StaticResource TextColorModes}" SelectedValue="{Binding CellBackgroundColorMode}">
@@ -94,7 +94,7 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                    <Rectangle Name="rctCellBackgroundColor" Width="10" Height="10"
+                    <Rectangle Name="rctCellBackgroundColor" Width="10" Height="10" IsEnabled="{Binding EnableCellBackground}"
                                Stroke="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"
                                Fill="{Binding CellBackgroundColor}" MouseDown="RctCellBackgroundColor_MouseDown">
                         <Rectangle.Style>
@@ -110,10 +110,10 @@
                 </StackPanel>
             </WrapPanel>
         </GroupBox>
-        <GroupBox Header="Alignment">
+        <GroupBox Header="Layout">
             <WrapPanel Orientation="Horizontal">
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Name="chkBoHorizontalAlignment" IsChecked="{Binding EnableHorizontalAlignment}" />
+                    <CheckBox Name="chkBxHorizontalAlignment" IsChecked="{Binding EnableHorizontalAlignment}" />
                     <Label Name="lblHorizontalAlignment" Content="Horizontal alignment" IsEnabled="{Binding EnableHorizontalAlignment}" />
                     <ComboBox Name="cmbBxHorizontalAlignment" IsEnabled="{Binding EnableHorizontalAlignment}"
                               ItemsSource="{StaticResource HorizontalAlignmentValues}" SelectedValue="{Binding HorizontalAlignment}">
@@ -125,7 +125,7 @@
                     </ComboBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Name="chkBoVerticalAlignment" IsChecked="{Binding EnableVerticalAlignment}" />
+                    <CheckBox Name="chkBxVerticalAlignment" IsChecked="{Binding EnableVerticalAlignment}" />
                     <Label Name="lblVerticalAlignment" Content="Vertical alignment" IsEnabled="{Binding EnableVerticalAlignment}" />
                     <ComboBox Name="cmbBxVerticalAlignment" IsEnabled="{Binding EnableVerticalAlignment}"
                               ItemsSource="{StaticResource VerticalAlignmentValues}" SelectedValue="{Binding VerticalAlignment}">
@@ -137,13 +137,37 @@
                     </ComboBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Name="chkBoTextAlignment" IsChecked="{Binding EnableTextAlignment}" />
+                    <CheckBox Name="chkBxTextAlignment" IsChecked="{Binding EnableTextAlignment}" />
                     <Label Name="lblTextAlignment" Content="Text alignment" IsEnabled="{Binding EnableTextAlignment}" />
                     <ComboBox Name="cmbBxTextAlignment" IsEnabled="{Binding EnableTextAlignment}"
                               ItemsSource="{StaticResource TextAlignmentValues}" SelectedValue="{Binding TextAlignment}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Converter={StaticResource TextAlignmentToStringConverter}}" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkBxWidth" IsChecked="{Binding EnableMaxWidth}" />
+                    <Label Name="lblWidth" Content="Max width" IsEnabled="{Binding EnableMaxWidth}" />
+                    <local:NumericTextBox x:Name="numBxWidth" Width="40" IsEnabled="{Binding EnableMaxWidth}"
+                                              Value="{Binding MaxWidth}" MaxValue="2000" MinValue="30" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkBxHeight" IsChecked="{Binding EnableMaxHeight}" />
+                    <Label Name="lblHeight" Content="Max height" IsEnabled="{Binding EnableMaxHeight}" />
+                    <local:NumericTextBox x:Name="numBxHeight" Width="40" IsEnabled="{Binding EnableMaxHeight}"
+                                            Value="{Binding MaxHeight}" MaxValue="500" MinValue="10" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkBxTextWrapping" IsChecked="{Binding EnableTextWrapping}" />
+                    <Label Name="lblTextWrapping" Content="Text Wrapping" />
+                    <ComboBox Name="cmbBxTextWrapping" IsEnabled="{Binding EnableTextWrapping}" 
+                              ItemsSource="{StaticResource TextWrappingValues}" SelectedValue="{Binding TextWrapping}">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Converter={StaticResource TextWrappingToStringConverter}}" />
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
