--- a/Windows/TerminalLineDetailWindow.xaml
+++ b/Windows/TerminalLineDetailWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="Terminal Line Detail" Height="450" Width="800">
     <Grid>
-        <ListView Name="lstFields" helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True">
+        <ListView Name="lstFields" helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True" Loaded="LstFields_Loaded">
             <ListView.Resources>
                 <!--<Style TargetType="GridViewColumnHeader">
                     <Setter Property="Visibility" Value="Collapsed" />
@@ -27,7 +27,8 @@
                     <GridViewColumn Header="Value">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBox BorderThickness="0" IsReadOnly="True" Text="{Binding Text}" TextWrapping="Wrap" />
+                                <TextBox BorderThickness="0" IsReadOnly="True" Text="{Binding Text}" TextWrapping="Wrap"
+                                         MaxHeight="200" VerticalScrollBarVisibility="Auto" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
