--- a/Windows/Controls/ExecutionListView.xaml
+++ b/Windows/Controls/ExecutionListView.xaml
@@ -19,8 +19,20 @@
                   helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True">
             <ListView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Stop" Icon="□" Command="{Binding Path=StopCommand}" />
-                    <MenuItem Header="Restart" Icon="↺" Command="{Binding Path=RestartCommand}" />
+                    <MenuItem Header="Stop" Command="{Binding Path=StopCommand}">
+                        <MenuItem.Icon>
+                            <Viewbox Width="20" Height="20">
+                                <Label Content="■" Foreground="Red" FontSize="48" />
+                            </Viewbox>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Restart" Command="{Binding Path=RestartCommand}">
+                        <MenuItem.Icon>
+                            <Viewbox Width="20" Height="20">
+                                <Label Content="↺" Foreground="Blue" FontSize="60" Padding="0,-30,0,0" />
+                            </Viewbox>
+                        </MenuItem.Icon>
+                    </MenuItem>
                 </ContextMenu>
             </ListView.ContextMenu>
             
@@ -41,8 +53,10 @@
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{Binding Name}" />
-                        <Button Name="btnRestart" Grid.Column="2" Width="20" Content="↺" Tag="{Binding Id}" Click="BtnRestart_Click" />
-                        <Button Name="btnStop" Grid.Column="3" Width="20" Content="□" Tag="{Binding Id}" Click="BtnStop_Click" />
+                        <Button Name="btnRestart" Grid.Column="2" Width="24" Height="24" Content="↺" ToolTip="Restart" Tag="{Binding Id}" Click="BtnRestart_Click"
+                                Style="{StaticResource buttonIcon}" Foreground="Blue" FontSize="20" Padding="0,-3,0,0" />
+                        <Button Name="btnStop" Grid.Column="3" Width="24" Height="24" Content="■" ToolTip="Stop" Tag="{Binding Id}" Click="BtnStop_Click"
+                                Style="{StaticResource buttonIcon}" Foreground="Red" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
